add open-api handler
